--- a/PythonTextImage.ipynb
+++ b/PythonTextImage.ipynb
@@ -46,13 +46,15 @@
     "#draw.text((0, 0),\"Hello world\",(255,255,255),font=font)\n",
     "#img.save('TSI_verified_post_new.png')\n",
     "\n",
-    "info_txt_1 = 'Oxygen refilling available from 10am 8/5/21'\n",
-    "info_txt_2 = 'Rs.400 for small cylinder'\n",
-    "info_txt_3 = 'Rs.600 for big cylinder'\n",
-    "info_txt_4 = 'Patient aadhar and reports needed'\n",
-    "dtm_txt = 'Verified at 11:40 am, 27/4/2021'\n",
-    "place_txt = 'Place: Kalindi Hospital'\n",
-    "contact_txt = 'Contact: 08006152108'\n"
+    "resource_type = 'oxygen'\n",
+    "city = 'Assam'\n",
+    "info_txt_1 = 'Oxygen filling available'\n",
+    "info_txt_2 = 'Imamul Hussain'\n",
+    "info_txt_3 = 'Address: North Lakhimpur'\n",
+    "dtmz = 'Verified at 11:40 am, 27/4/2021'\n",
+    "contact_1 = '9101346211'\n",
+    "contact_2 = '9998887771'\n",
+    "contact_3 = '8888555533'\n"
    ]
   },
   {
@@ -110,17 +112,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-24-75a0f22c62ec>, line 33)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-24-75a0f22c62ec>\"\u001b[1;36m, line \u001b[1;32m33\u001b[0m\n\u001b[1;33m    else\u001b[0m\n\u001b[1;37m        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def create_img(img\n",
     "               ,draw\n",
     "               ,info_txt_1\n",
     "               ,info_txt_2\n",
     "               ,info_txt_3\n",
-    "               ,info_txt_4\n",
-    "               ,dtm_txt\n",
+    "               ,dtmz\n",
     "               ,place_txt\n",
     "               ,contact_txt\n",
     "               ,offset\n",
@@ -136,7 +146,7 @@
     "    font_head = ImageFont.truetype(font_path, 120)\n",
     "    \n",
     "    W, H = img.size\n",
-    "    body_txt_ls = [info_txt_1, info_txt_2, info_txt_3, info_txt_4, place_txt, contact_txt]\n",
+    "    body_txt_ls = [info_txt_1, info_txt_2, info_txt_3, place_txt, contact_txt]\n",
     "    \n",
     "    # formatting dtm_txt\n",
     "    w, h = draw.textsize(dtm_txt)\n",
@@ -147,8 +157,7 @@
     "    for item in body_txt_ls:\n",
     "        if len(item.replace(' ','')) > 0:\n",
     "            offset = txt_insert(draw, item, width, offset, font_body, img_width=W)\n",
-    "        else:\n",
-    "            \n",
+    "        else\n",
     "        if count==4:\n",
     "            offset+=100\n",
     "        count+=1\n",
@@ -157,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,13 +215,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "\n",
+    "def zxc():\n",
+    "    a=2\n",
+    "    b=['a','b']\n",
+    "    \n",
+    "    return a,b\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p,q =zxc()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['a', 'b']"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q"
    ]
   }
  ],
